--- a/Reading/freereads.html
+++ b/Reading/freereads.html
@@ -383,7 +383,7 @@
 			    	<!--作者右边-->
 			        <div class="msg-tab-right">
 			        	<div style="margin: 0 75px;">
-			        		<img src="img/image1/0.png" width="100px"/>
+			        		<img style="margin-top: 20px;" src="img/image1/0.png" width="100px"/>
 			        	</div>
 			         	<span>LV.4</span>
 			         	<h4>程砚秋<span class="queen"></span></h4>
