--- a/Reading/register.html
+++ b/Reading/register.html
@@ -107,7 +107,7 @@
             			<div class="deal clearfix">
             				<div class="login-check">我已阅读并同意《用户服务协议》</div>	
             			</div>
-            			<a href="javascript:" class="btnreg disabled" >立即注册</a>         			
+            			<a href="javascript:" class="btnreg disabled" disabled="true">立即注册</a>         			
             		</div>
             	</form>
             	<!--注册成功-->
