--- a/Reading/wms-addbook.html
+++ b/Reading/wms-addbook.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>后台管理 | 添加图书_Reading中文网</title>
+		<link rel="shortcut icon" type="image/x-icon" href="readicon.ico"/>
 		<link rel="stylesheet" type="text/css" href="css/wms-index.css"/>
 		<script src="js/jquery-3.3.1.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/wms-index.js" type="text/javascript" charset="utf-8"></script>			
@@ -95,9 +96,9 @@
 									</ul>
 								</div>
 							</li>
-							<li><a href="#" class=""><i class="lnr lnr-chart-bars"></i> <span>作家管理</span></a></li>
-							<li><a href="#" class=""><i class="lnr lnr-cog"></i> <span>用户管理</span></a></li>
-							<li><a href="#" class=""><i class="lnr lnr-alarm"></i> <span>订单管理</span></a></li>
+							<li><a href="wms-autor.html" class=""><i class="lnr lnr-chart-bars"></i> <span>作家管理</span></a></li>
+							<li><a href="wms-users.html" class=""><i class="lnr lnr-cog"></i> <span>用户管理</span></a></li>
+							<li><a href="#" class=""><i class="lnr lnr-alarm"></i> <span>消息中心</span></a></li>
 							
 							<!--<li><a href="#" class=""><i class="lnr lnr-dice"></i> <span>Tables</span></a></li>
 							<li><a href="#" class=""><i class="lnr lnr-text-format"></i> <span>Typography</span></a></li>
@@ -190,7 +191,7 @@
 			                	封面： <input type="file" id="btnimg2" onclick="imgChange2()">
 							</div>
 							<br />
-							<input type="button" class="btn btn-primary " value="确认">
+							<input type="button" class="btn btn-primary " value="确认" @click="addbooks">
 				            <input type="button" class="btn btn-default " value="重置">
 							<div class="book-img">
 								<img id="image2" width="180px" height="240px"/>
