--- a/Reading/wms-users.html
+++ b/Reading/wms-users.html
@@ -98,7 +98,7 @@
 							</li>
 							<li><a href="wms-autor.html" class=""><i class="lnr lnr-users"></i> <span>作家管理</span></a></li>
 							<li><a href="wms-users.html" class="active"><i class="lnr lnr-license"></i> <span>用户管理</span></a></li>
-							<!--<li><a href="#" class=""><i class="lnr lnr-alarm"></i> <span>订单管理</span></a></li>-->
+							<li><a href="#" class=""><i class="lnr lnr-alarm"></i> <span>消息中心	</span></a></li>
 							
 							<!--<li><a href="#" class=""><i class="lnr lnr-dice"></i> <span>Tables</span></a></li>
 							<li><a href="#" class=""><i class="lnr lnr-text-format"></i> <span>Typography</span></a></li>
