--- a/Reading/freereads.html
+++ b/Reading/freereads.html
@@ -8,8 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="css/freeread.css"/>
 		<link rel="stylesheet" type="text/css" href="css/header-footer.css"/>
-		<script src="js/jquery.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/star-rating.min.js" type="text/javascript" charset="utf-8"></script>
+		<script src="js/jquery.js" type="text/javascript" charset="utf-8"></script><script src="js/jquery.raty.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/starts.js" type="text/javascript" charset="utf-8"></script>		
 	</head>
@@ -101,15 +100,7 @@
 			    		<span>8.<i>7</i></span>
 			    		<p><span>144</span>人评价</p>
 			    		<p>我要评价</p>
-			    		<div class="star">
-			    			<img src="img/image1/star3.png"/>
-				    		<img src="img/image1/star3.png"/>
-				    		<img src="img/image1/star3.png"/>
-				    		<img src="img/image1/star3.png"/>
-				    		<img src="img/image1/star3.png"/>
-			    		</div>
-			    		<!--<div id="star"></div>-->
-			    		
+			    		<div id="star"></div>
 			    		<p><a href="#"><img src="img/image1/book1 (1).jpg"/>订阅</a>
 			    			<a href="#"><img src="img/image1/down.jpg"/>下载</a>
 			    		</p>
@@ -120,7 +111,7 @@
 			    	<ul id="content" class="list-inline t1">
 			    		<li><a href="javascript:void(null)">作品信息</a></li>
 			    		<li><a href="javascript:void(null)">目录（711章）</a></li>
-			    		<li><a href="javascript:void(null)">作品讨论（2352条）</a></li>
+			    		<li><a href="discuss.html">作品讨论（2352条）</a></li>
 			    	</ul>
 			    </div>
 			    <div id="msg-tab1" class="msg-tab ">
@@ -383,7 +374,7 @@
 			    	<!--作者右边-->
 			        <div class="msg-tab-right">
 			        	<div style="margin: 0 75px;">
-			        		<img src="img/image1/0.png" width="100px"/>
+			        		<img style="margin-top: 20px;" src="img/image1/0.png" width="100px"/>
 			        	</div>
 			         	<span>LV.4</span>
 			         	<h4>程砚秋<span class="queen"></span></h4>
