--- a/Reading/free.html
+++ b/Reading/free.html
@@ -66,7 +66,7 @@
 						<a href="free.html"  class="act">免费</a>
 					</li>
 					<li class="nav-li" id="app">
-						<a href="none">
+						<a href="#">
 							<b class="iconfont icon-iconphone client"></b>
 							客户端
 						</a>
@@ -272,21 +272,21 @@
 						<li>
 							<div class="books_img fl">
 								<a href="freereads.html">
-									<img src="img/img_slin/freemajor_1.jpg"/>
+									<img src="img/image1/180.jpg"/>
 								</a>
 								<div class="books_img_grade">8.5</div>
 							</div>
 							<div class="books_info book_info_major fl">
-								<h4><a href="freereads.html">哈利波特之我是传奇</a></h4>
+								<h4><a href="freereads.html">有妖气客栈</a></h4>
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
-									<a href="">纠结于名</a><em>|</em>
-									<a href="">奇幻</a>
+									<a href="">程砚秋</a><em>|</em>
+									<a href="">玄幻</a><em>|</em>
 									<span>连载中</span>
 								</div>
-								<p class="books_info_intro">霍法来到了哈利波特的世界，满心欢喜的他以为可以一睹传奇巫师真容，调戏正太萝莉。然而他却发现自己来到了1938年！成为了伏地魔的同学，邓布利多的学生。我的赫敏呢？我的铁三角呢？不存在</p>
+								<p class="books_info_intro">一个有妖气的系统，一位有妖气的掌柜，一家有妖气的客栈。垒起七星灶，铜壶煮三江。摆开八仙桌，招待十六方。笑纳四海客，有妖嘴两张。相逢人一笑，白衣换红裳。人一走，杯不凉，有驴醉倒在桌旁。………………………………南来北往一杯酒，闲来无事话桑麻，这是一个客栈轻松，日常，逗逼的故事。书友群：61</p>
 								<div class="info_major_update">
-									<a href="freereads.html">最新更新 22，感激与责难</a><em>·</em><span>2018-10-16 12:00:00</span>
+									<a href="freereads.html">最新更新 第七百零八章 馋嘴妖怪</a><em>·</em><span>2018-10-16 12:00:00</span>
 								</div>
 							</div>
 							<div class="book_info_right fr text-right">
@@ -315,7 +315,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">有梦之人</a><em>|</em>
-									<a href="">科幻</a>
+									<a href="">科幻</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">在电影的世界里唯有不断地变强，才能主宰自己的命运。“当人们看到你成功的光芒，便会忘记你手段的黑暗。”徐一凡如是地说。正版订阅群：636729383</p>
@@ -349,7 +349,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">烟雨江南</a><em>|</em>
-									<a href="">玄幻</a>
+									<a href="">玄幻</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">谁家年少，煮酒调笑。盈握素腰，同舟醉邀。燕开庭的纨绔日子本来过得舒舒服服，走马章台，倾倒渭水，闲来无事再修修道，却不料被卷入一场仙家风波……</p>
@@ -383,7 +383,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">紫蓝色的猪</a><em>|</em>
-									<a href="">二次元</a>
+									<a href="">二次元</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">一本冲着黑暗大陆而去的正常向全职猎人同人。已完结小说：火影之祸害，刀剑神域之活下去，海贼王之漫漫长路。</p>
@@ -417,7 +417,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">太一生水</a><em>|</em>
-									<a href="">玄幻</a>
+									<a href="">玄幻</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">【火爆玄幻】一滴魔血，照破山河万朵。一卷古经，湮灭日月轮回。一部神诀，埋葬诸天至尊。杨青玄得天命传承，修无敌之法，开启了一场碾压当世无数天才，通往万古不朽的强者之路！“我一向以德服</p>
@@ -451,7 +451,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">外汇似海</a><em>|</em>
-									<a href="">都市</a>
+									<a href="">都市</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">一名外汇交易员重生回到了学生时代，这个野心勃勃的学生一手打造自己的超级金融垄断帝国，组建世界级大财团，缔造世界超等大豪门！资本横推华尔街，金钱席卷六大洲！他是隐藏在这颗星球幕后的终</p>
@@ -485,7 +485,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">倾世大鹏</a><em>|</em>
-									<a href="">仙侠</a>
+									<a href="">仙侠</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">一切轮回的开端，既是从零开始的选拔，也是生与死的竞争，铁与血之间的较量。（PS：已完本三百二十万字长篇《无限之开荒者》，从未断更，人品保证，请放心收藏。）书友交流群：1951295</p>
@@ -519,7 +519,7 @@
 								<div class="books_info_author">
 									<i class="iconfont">&#xe634;</i>
 									<a href="">木子田心敏</a><em>|</em>
-									<a href="">都市</a>
+									<a href="">都市</a><em>|</em>
 									<span>连载中</span>
 								</div>
 								<p class="books_info_intro">看了一场流星，变成了一只老虎，还是动物园的老虎。整个世界自从自己变做老虎开始，就完全变了。鬼魂，妖类，灵兽，应有尽有。本书不倾向于化形，如果想看化形泡妹子大概是看不到了。也不是纯粹</p>
