--- a/Reading/finishworks.html
+++ b/Reading/finishworks.html
@@ -66,7 +66,7 @@
 						<a href="free.html">免费</a>
 					</li>
 					<li class="nav-li" id="app">
-						<a href="none">
+						<a href="#">
 							<b class="iconfont icon-iconphone client"></b>
 							客户端
 						</a>
