--- a/Reading/wms-index.html
+++ b/Reading/wms-index.html
@@ -131,8 +131,8 @@
 									<div class="metric">
 										<span class="icon"><i class="fa fa-shopping-bag"></i></span>
 										<p>
-											<span class="number"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">203 </font></font></span>
-											<span class="title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">订单量</font></font></span>
+											<span class="number"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">34,203 </font></font></span>
+											<span class="title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">留言量</font></font></span>
 										</p>
 									</div>
 								</div>
