--- a/Reading/finishworks.html
+++ b/Reading/finishworks.html
@@ -471,14 +471,14 @@
 						</ul>
 					</div>
 					<!--状态-->
-					<div class="worksmain_aside_selectlist_per">
+					<!--<div class="worksmain_aside_selectlist_per">
 						<strong><p>状态</p></strong>
 						<ul class="list-unstyled list-inline">
 							<li class="selectlist_per_li_selected"><a>全部</li>
 							<li><a>连载</a></li>
 							<li><a>完本</a></li>
 						</ul>
-					</div>
+					</div>-->
 					<!--属性-->
 					<div class="worksmain_aside_selectlist_per">
 						<strong><p>属性</p></strong>
